# bazelDockerRulesCommaBug

./: BUILD.bazel  README.md  WORKSPACE
